--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
 .App {
+  width: 100%;
+}
+
+.title {
+  font-family: 'Exo 2', sans-serif;
+  font-size: 36px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cardWrapper {
+  display: inline-block;
+  width: 540px;
+  height: 720px;
+  margin: 0 2.4%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#cardBorderBackground1 {
+  width: 550px;
+  height: 710px;
+  background-color: rgb(14, 157, 239);
+  border-radius: 15px;
+  clip-path: polygon(73px 0, 100% 0, 100% 100%, 0 100%, 0 73px);
+}
+
+#cardBorderBackground2 {
+  width: 550px;
+  height: 710px;
+  background-color: rgb(244, 26, 193);
+  border-radius: 15px;
+  clip-path: polygon(73px 0, 100% 0, 100% 100%, 0 100%, 0 73px);
+}
+
+#cardBorderBackground3 {
+  width: 550px;
+  height: 710px;
+  background-color: rgb(119, 118, 118);
+  border-radius: 15px;
+  clip-path: polygon(73px 0, 100% 0, 100% 100%, 0 100%, 0 73px);
+}
+
+.card {
+  width: 540px;
+  height: 700px;
+  background-color: rgb(232, 235, 247);
+  background-image: url('./images/48adbc37d59237857a6426336594778117f9b08e.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: -50px 300px;
+  border-radius: 15px;
+  position: relative;
+  clip-path: polygon(80px 0, 100% 0, 100% 100%, 0 100%, 0 80px);
+}
+
+.card:hover {
+  background-color: rgb(198, 207, 244);
+}
+
+.checkMark {
+  margin-top: 10px;
+  margin-right: 15px;
+  background-color: rgb(1, 121, 2);
+  float: right;
+  width: 60px;
+  height: 60px;
+  clip-path: polygon(0 55%, 45% 100%, 100% 10%, 40% 75%);
+}
+
+.catCard1 {
+  border: 5px solid rgb(14, 157, 239);
+}
+
+.catCard2 {
+  border: 5px solid rgb(244, 26, 193);
+}
+
+.card h1 {
+  margin: 0 14%;
+  font-size: 5em;
+}
+
+.card h2 {
+  margin: 0 15%;
+  font-size: 2em;
+}
+
+.cardText {
+  color: rgb(119, 118, 118);
+  margin: 15px 15% 0 15%;
+  font-size: 1.2em;
+}
+
+.circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	width: 150px;
+	height: 150px;
+	-moz-border-radius: 90px;
+	-webkit-border-radius: 90px;
+  border-radius: 90px;
+  position: relative;
+  left: 67%;
+  top: 39%;
+  text-align: center;
+  font-size: 40px;
+  color: white;
+  line-height: 0.9em;
+}
+
+.circle p .number {
+  font-size: 80px;
+}
+
+.circle1 {
+  background: rgb(14, 157, 239);
+}
+
+.circle2 {
+  background: rgb(244, 26, 193);
+}
+
+.circle3 {
+  top: 35%;
+}
+
+.bottomText {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+.grayCard .card {
+  border: 5px solid rgb(119, 118, 118);
+}
+
+.grayCard .card::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  border-radius: 15px;
+}
+
+.grayCard h1, .grayCard h2 {
+  color: rgb(119, 118, 118);
+}
+
+.grayCard .circle{
+  background: rgb(119, 118, 118);
+}
+
+.grayCard .bottomText{
+  color: rgb(234, 234, 119);
+}
+
+.cardWrapper a {
+  color: rgb(14, 157, 239);
+  text-decoration: underline;
 }
